# profanity-filter

./: README.md  pyproject.toml  setup.py
profanity_filter/: __init__.py  config.py  profanity_filter.py  spacy_component.py  types_.py
