[tool.poetry]
name = "profanity-filter"
version = "1.3.3"
description = "A Python library for detecting and filtering profanity"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
maintainers = ["Roman Inflianskas <infroma@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/rominf/profanity-filter"
keywords = ["library", "profanity", "filter", "censor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^3"
ordered-set = "^3.0"
cached-property = "^1.5"
ordered-set-stubs = "^0.1.3"
dataclasses = {version = "^0.6.0",python = "~3.6"}
more-itertools = "^8.0"
redis = "^4.3.1"
pydantic = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
dill = "^0.2.9"

[tool.poetry.scripts]
profanity_filter = 'profanity_filter.console:main'
