[tool.poetry]
name = "profanity-filter"
version = "2.0.0"
description = ""
authors = ["Aleksey Ivashov <aivashov@temporal-games.com>"]
license = "GPL-3.0+"
readme = "README.md"
packages = [{include = "profanity_filter"}]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.2"
cached-property = "^1.5.2"
more-itertools = "^9.0.0"
ordered-set = "^4.1.0"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
